add_custom_target(check_osi COMMAND ${CMAKE_CTEST_COMMAND})

macro (osi_register_suite suite)
  add_custom_target(check_osi_${suite}
    COMMAND ${CMAKE_CTEST_COMMAND})
endmacro ()

macro (osi_register_test suite name)
  add_executable(test_osi_${name} ${name}.c test.h)
  target_link_libraries(test_osi_${name} osi)
  add_test(test_osi_${name} test_osi_${name})
  add_dependencies(check test_osi_${name})
  add_dependencies(check_osi test_osi_${name})
  add_dependencies(check_osi_${suite} test_osi_${name})
  add_dependencies(test_osi_${name} osi)
endmacro ()

osi_register_suite(fiber)
osi_register_test(fiber fiber_adjectives)
osi_register_test(fiber fiber_call)
osi_register_test(fiber fiber_call_return_value)
osi_register_test(fiber fiber_call_to_parameter)
osi_register_test(fiber fiber_is_done)
osi_register_test(fiber fiber_resume_caller)
osi_register_test(fiber fiber_yield_return_value)

osi_register_suite(sema)
osi_register_test(sema sema_init)
osi_register_test(sema sema_init_value)
osi_register_test(sema sema_trywait)
osi_register_test(sema sema_trywait_after_post)
osi_register_test(sema sema_ensure_wait)
osi_register_test(sema sema_basic)
osi_register_test(sema sema_rw)

osi_register_suite(mutex)
osi_register_test(mutex mutex_init)

osi_register_suite(future)
osi_register_test(future future_init)
osi_register_test(future future_init_imediate)

if (OSI_THREADING)
  osi_register_suite(reactor)
  osi_register_test(reactor reactor_init)
  osi_register_test(reactor reactor_stop_start)
  osi_register_test(reactor reactor_stop_start_repeat)
  osi_register_test(reactor reactor_start_wait_stop)
  osi_register_test(reactor reactor_unregister_from_callback)
  osi_register_test(reactor reactor_unregister_from_thread)
endif ()

osi_register_suite(blocking_queue)
osi_register_test(blocking_queue blocking_queue_init)
osi_register_test(blocking_queue blocking_queue_empty)
osi_register_test(blocking_queue blocking_queue_length)
osi_register_test(blocking_queue blocking_queue_push_pop)

osi_register_suite(thread)
osi_register_test(thread thread_init)
